welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: not found: type int
  var k : int = 0
          ^